...
                                <nil key="highlightedColor"/>
                            </label>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="productionListTableView" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizing
                                <rect key="frame" x="16" y="165" width="361" height="578"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="productListCell" rowHeight="325" id="DQI-SS-JM6" userLabel="ProductListCell" customClass="ProductListTableViewCell" customModule="ShoppingApp" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="50" width="361" height="325"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DQI-SS-JM6" id="gUe-TE-ZtN">
                                            <rect key="frame" x="0.0" y="0.0" width="361" height="325"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
...
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="9r3-0Z-Aup"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="kpV-lW-1nW"/>
                                </connections>
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="btnTotalAmount" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tLw-s0-dQR">
                                <rect key="frame" x="92" y="751" width="209" height="43"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnTotalAmount"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="43" id="li7-Hp-1Dp"/>
                                </constraints>
                                <state key="normal" title="Button"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YRT-qq-cMJ">
                                <rect key="frame" x="236" y="682" width="40" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnAddToCart"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="+">
                                    <backgroundConfiguration key="background">
                                        <color key="backgroundColor" name="AccentColor"/>
                                    </backgroundConfiguration>
                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <connections>
                                    <action selector="addToChartActionWithSender:" destination="MNO-Lk-LzU" eventType="touchUpInside" id="1Ar-gO-XLP"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rIY-P0-8qa">
                                <rect key="frame" x="116" y="687.66666666666663" width="40" height="34.333333333333371"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnRemoveFromCart"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="40" id="z5u-fo-KfY"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="-">
                                    <backgroundConfiguration key="background">
...
                                            <outlet property="productName" destination="U5m-6E-5MB" id="vDK-EQ-dyO"/>
                                            <outlet property="productPrice" destination="xhi-J5-GIA" id="Qlv-tD-6me"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" restorationIdentifier="btnCheckout" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="POF-OP-kXC">
                                <rect key="frame" x="92" y="723" width="209" height="55"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnCheckout"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Checkout">
                                    <backgroundConfiguration key="background">
                                        <color key="backgroundColor" name="AccentColor"/>
                                    </backgroundConfiguration>
                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </buttonConfiguration>
                                <connections>
...
